h__try fix jump bgi and bgi for safari is fixed

--- a/css/style.css
+++ b/css/style.css
@@ -57,8 +57,6 @@ body {
   background-image: url('../images/imgonline-com-ua-Compressed-Cr7J2Z87bwNBpRmi.jpg');
   background-repeat: no-repeat;
   background-attachment: scroll;
-  background-position: center center;
-
 }
 .container {
     max-width: 1200px;
